feat: support WalletConnect.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@web3modal/ethers5": "^3.3.2",
     "abi-decoder": "^2.4.0",
     "axios": "^1.5.1",
+    "buffer": "6.0.3",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "ethers": ">=5.0.0 <6.0.0",
     "framer-motion": "^10.16.4",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
