--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_APP_NETWORK=
 VITE_INFURA_API_KEY=
 VITE_APP_DAPP_ID=
 VITE_APP_AMPLITUDE_KEY=
+VITE_WALLET_CONNECT_ID=
 
 VITE_ETHERSCAN_API_KEY=
 VITE_ARBISCAN_API_KEY=
